[project]
name = "vantron-renogy-support"
version = "0.1.0"
description = ""
authors = [{name = "Scott Hyndman", email = "scotty.hyndman@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "aiomqtt==2.4.0",
    "ha-mqtt-discoverable @ git+https://github.com/shyndman/ha-mqtt-discoverable.git@main",
    "paho-mqtt==2.1.0",
    "pydantic==2.11.7",
    "bleak (>=0.22.3,<0.23.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "bitarray (>=3.1.0,<4.0.0)",
    "stringcase (>=1.2.0,<2.0.0)",
]

[project.scripts]
add_discovery_topics = 'vantron_renogy_support.bin.add_discovery_topics:run'
run_renogy_publisher = 'vantron_renogy_support.bin.run_renogy_publisher:run'

[tool.poetry]
packages = [{include = "vantron_renogy_support", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
